--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,3 +6,17 @@ layout: default
 <time>{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</time>
 
 {{ content }}
+
+
+{% for category in site.categories %}
+<h2>{{ category | first }}</h2>
+<span>{{ category | last | size }}</span>
+<ul class="arc-list">
+	{% for post in category.last %}
+		<li>
+			{{ post.date | date:%Y-%m-%d }}
+			<a href="{{ post.url }}">{{ post.title }}</a>
+		</li>
+	{% endfor %}
+</ul>
+{% endfor %}
