Change categorys size position

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,8 +9,8 @@ layout: default
 
 
 {% for category in site.categories %}
-<h2>{{ category | first }}</h2>
-<span>{{ category | last | size }}</span>
+<h2>{{ category | first }}({{ category | last | size }})</h2>
+
 <ul class="arc-list">
 	{% for post in category.last %}
 		<li>
