--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,6 @@
 </aside>
 
 <header>
-	<h1><a href="{{ site.baseurl }}">{{ site.title }}</a></h1>
+	<img src="/assets/images/logo.png" width="100%" height="100%"/>
 </header>
  
